# hakoniwa-core-pro

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.bash  check-install.bash  debian-package.md  debian.bash  install-hakoniwa.bash  install.bash  release.md  run-example.bash  run-python.bash  uninstall.bash  win-build-install.ps1  win-build.bat  win-build.ps1
cmake/: hako_build_defaults.conf  hakoniwa-core.pc.in  hakoniwa-coreConfig.cmake.in
cmake-options/: default-cmake-options.cmake  win-cmake-options.cmake
debian/: changelog  clean  control  copyright  hako-cmd.1  hakoniwa-core-dev.install  hakoniwa-core-dev.links  hakoniwa-core.dirs  hakoniwa-core.install  hakoniwa-core.postinst  hakoniwa-core.postrm  libhakoniwa-assets1.install  libhakoniwa-conductor1.install  libhakoniwa-shakoc1.install  python3-hakopy.install  rules
debian/python-files/: hakopy.py
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  custom.json  hello_world.py  pdutypes.json
examples/hello_world/src/: hello_world.c
examples/pdu_communication/: asset_controller.py  asset_plant.py
examples/pdu_communication/src/: asset_controller.c  asset_plant.c
examples/service/: CMakeLists.txt  asset_client.py  asset_server.py  custom.json  service.json
examples/service/src/: asset_client.cpp  asset_server.cpp
include/: hako_asset.h  hako_asset_pdu.hpp  hako_asset_service.h  hako_asset_service_client.hpp  hako_asset_service_server.hpp  hako_capi.h  hako_capi_types.h  hako_export.h  hako_service.h  hakoniwa_asset_polling.h
launcher/: requirements.txt
launcher/config/: drone_pdu_config.json  drone_service.json
launcher/examples/: drone-api.launch.json  drone.launch.json  test_drone.launch.json
launcher/hako_drone/: hako_drone_service.py
launcher/hako_launch/: hako_asset_runner.py  hako_launcher.py  hako_monitor.py  loader.py  model.py
launcher/hako_mcp/: hako_mcp_base_server.py  hako_mcp_drone_server.py  server.py
launcher/hako_rpc/: hako_drone_rpc_server.py  hako_rpc_server.py  server_rpc.py
sources/assets/bindings/python/: CMakeLists.txt  dump_pdudef_from_nodes.py  hako_asset_service.py  hako_asset_service_client.py  hako_asset_service_config.py  hako_asset_service_constants.py  hako_asset_service_server.py  shm_common.py  shm_service_client.py  shm_service_server.py  shm_topic_publisher.py  shm_topic_subscriber.py
sources/assets/bindings/python/service/: hako_asset_service_client.py  hako_asset_service_config.py  hako_asset_service_server.py
sources/assets/bindings/python/src/: dump_meta.py  dump_pdu.py  hako_asset_python.cpp  hako_config.py  hako_pdu.py  parse_pdu.py
sources/assets/bindings/python/src/hako_binary/: binary_io.py  binary_reader.py
sources/assets/bindings/python/src/hako_parser/: parse_meta.py
sources/assets/callback/: CMakeLists.txt
sources/assets/callback/src/: hako_asset.cpp  hako_asset_impl.cpp  hako_asset_impl.hpp  hako_asset_service.cpp  hako_asset_service_client.cpp  hako_asset_service_server.cpp  hako_service.cpp  hako_service_impl.cpp  hako_service_impl.hpp
sources/assets/polling/: CMakeLists.txt
sources/assets/polling/src/: hako_asset_service.cpp  hako_asset_service_client.cpp  hako_asset_service_server.cpp  hako_capi.cpp  hakoniwa_asset_polling.cpp
sources/command/: CMakeLists.txt
sources/command/src/: dump_meta.cpp  dump_meta.hpp  hako_cmd.cpp
sources/conductor/: CMakeLists.txt
sources/conductor/src/: hako_conductor.cpp  hako_conductor_impl.cpp
sources/core/: CMakeLists.txt
sources/core/include/: hako_impl.hpp  hako_pro_config.hpp  hako_pro_data.hpp  hako_pro_data_types.hpp  hako_profile.hpp  hako_service.hpp  hako_service_impl.hpp  hako_service_impl_client.hpp  hako_service_impl_server.hpp  hako_service_protocol.hpp  hako_service_protocol_client.hpp  hako_service_protocol_server.hpp  ihako_service_client.hpp  ihako_service_server.hpp
sources/core/src/: hako_impl.cpp  hako_pro.cpp  hako_pro_data.cpp  hako_pro_data_recv_event.cpp  hako_pro_data_service.cpp  hako_service_impl.cpp  hako_service_protocol.cpp
sources/core/src/service/: hako_pro_data_service.cpp  hako_service_impl.cpp  hako_service_impl_client.cpp  hako_service_impl_client.hpp  hako_service_impl_server.cpp  hako_service_impl_server.hpp  hako_service_protocol_client.cpp  hako_service_protocol_server.cpp
tests/assets/bindings/python/: test.bash  test.py  test_runner.py
tests/assets/bindings/python/data/: pdu_info.py  test_data.json
tests/assets/bindings/python/pdu/: test_pdu_fixed_array.py  test_pdu_struct.py  test_pdu_var_array_prim.py  test_pdu_var_array_struct.py
tests/cpp/: CMakeLists.txt  hako_asset_pdu_compact_test.cpp
